--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-Flask
-gunicorn
-werkzeug
+flask==3.0.3
+flask-cors==4.0.0
+flask-jwt-extended==4.6.0
+python-dotenv==1.0.1
+werkzeug==3.0.3
+itsdangerous==2.1.2
+click==8.1.7
+jinja2==3.1.4
+sqlite3-binary
